--- a/error_pages/501.html
+++ b/error_pages/501.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../bootstrap5/css/bootstrap.min.css" />
-    <script src="../bootstrap5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <script src="bootstrap.min.js"></script>
     <title>501 Not Implemented</title>
 </head>
 <body>
